* Number type keyboards for entering phone number and ID code
Prevent user to paste non-digic characters to phone number and ID code text fields

MOPPIOS-126

Signed-off-by: Sander Hunt <sander.hunt@fob-solutions.com>

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -254,3 +254,4 @@
 "container-validating" = "Loading...";
 "importing-files-progress-message" = "Importing files...";
 "mobile-id-sign-help-title" = "Make sure control code matches with one in phone screen and enter Mobile-ID PIN2-code";
+"done-button-title" = "Done";
