--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -255,3 +255,4 @@
 "container-validating" = "Laadimine...";
 "importing-files-progress-message" = "Failide laadimine...";
 "mobile-id-sign-help-title" = "Veendu kontollkoodi õigsuses ja sisesta telefonil Mobiil-ID PIN2-kood";
+"done-button-title" = "Valmis";
