--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -255,3 +255,4 @@
 "container-validating" = "Загрузка...";
 "importing-files-progress-message" = "Загрузка файлов...";
 "mobile-id-sign-help-title" = "Убедитесь, что контрольный код выше соответствует одному на экране телефона и введите PIN2-код Mobile-ID";
+"done-button-title" = "Оконченный";
