* Added informative text about empty list in recent containers view
MOPPIOS-111

Signed-off-by: Sander Hunt <sander.hunt@fob-solutions.com>

--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -40,7 +40,7 @@
 "signature-details-title" = "Allkirja detailid";
 
 // Signing view
-"signing-recent-containers" = "Hiljutised konteinerid";
+"signing-recent-containers" = "Hiljutised dokumendid";
 
 // Crypto
 "crypto-view-begin-label" = "Krüpteerimiseks või dekrüpteerimiseks vali fail";
@@ -256,3 +256,4 @@
 "importing-files-progress-message" = "Failide laadimine...";
 "mobile-id-sign-help-title" = "Veendu kontollkoodi õigsuses ja sisesta telefonil Mobiil-ID PIN2-kood";
 "done-button-title" = "Valmis";
+"recent-containers-empty-list-title" = "Hiljutised dokumendid puuduvad";
