* Fixed english localization for Sign button in container view
MOPPIOS-173

Signed-off-by: Sander Hunt <sander.hunt@fob-solutions.com>

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -23,7 +23,7 @@
 "tab-my-eid" = "MY eID";
 "tab-crypto" = "CRYPTO";
 "tab-signature" = "SIGNATURE";
-"tab-sign-button" = "SIGN CONTAINER";
+"tab-sign-button" = "SIGN";
 "tab-share-button" = "SHARE";
 "tab-encrypt-button" = "ENCRYPT";
 
