--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -258,3 +258,4 @@
 "mobile-id-sign-help-title" = "Make sure control code matches with one in phone screen and enter Mobile-ID PIN2-code";
 "done-button-title" = "Done";
 "recent-containers-empty-list-title" = "No recent documents";
+"recent-containers-empty-search-message" = "Document not found";
