--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -259,3 +259,4 @@
 "mobile-id-sign-help-title" = "Veendu kontollkoodi õigsuses ja sisesta telefonil Mobiil-ID PIN2-kood";
 "done-button-title" = "Valmis";
 "recent-containers-empty-list-title" = "Hiljutised dokumendid puuduvad";
+"recent-containers-empty-search-message" = "Dokumenti ei leitud";
