--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -260,3 +260,4 @@
 "mobile-id-sign-help-title" = "Убедитесь, что контрольный код выше соответствует одному на экране телефона и введите PIN2-код Mobile-ID";
 "done-button-title" = "Оконченный";
 "recent-containers-empty-list-title" = "Нет последних документов";
+"recent-containers-empty-search-message" = "Документ не найден";
