--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -261,5 +261,10 @@
 "recent-containers-empty-search-message" = "Dokumenti ei leitud";
 "sign-title-mobile-id" = "Mobiil-ID";
 "sign-title-id-card" = "ID kaart";
-"card-reader-state-not-ready" = "Kaardilugejat ei leitud.Palun veendu, et Bluetooth oleks lubatud ja kaardilugeja sisse lülitatud";
+"card-reader-state-reader-not-found" = "Palun veendu et kaardilugeja oleks ühendatud ja ID kaart kaardilugejas";
+"card-reader-state-id-card-not-found" = "Kaardilugeja leitud.\nSisesta enda ID-kaart kaardilugejasse.";
 "card-reader-state-ready" = "Valmis allkirjastamiseks ID kaardiga.\nPalun sisesta PIN2";
+"signing-in-progress" = "Toimub allkirjastamine.\nPalun oota.";
+"wrong-pin2" = "Vale PIN2. %d katset järgi.";
+"wrong-pin2-single" = "Vale PIN2. 1 katse järgi.";
+"card-reader-state-initial" = "Allkirjastamiseks ühenda kaardilugeja telefoniga ja sisesta enda ID-kaart lugejasse";
