--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -265,7 +265,8 @@
 "card-reader-state-initial" = "Подключите устройство чтения карт памяти к телефону и вставьте идентификационную карту в устройство чтения.";
 "card-reader-state-reader-not-found" = "Кард-ридер не найден. Убедитесь, что Bluetooth включен и устройство чтения карт включено.";
 "card-reader-state-id-card-not-found" = "Считыватель карт.\nВставьте свою ID-карту в устройство чтения.";
-"card-reader-state-ready" = "Готов подписать с удостоверением личности. Введите PIN2";
+"card-reader-state-ready" = "Готов подписать с удостоверением личности.\n%@ (%@)\nВведите PIN2";
 "signing-in-progress" = "Подписание.\nПодождите пожалуйста";
 "wrong-pin2" = "Неверный PIN2. У вас осталось %d попытки.";
 "wrong-pin2-single" = "Неверный PIN2. У вас есть 1 попытка.";
+"pin2-textfield-label" = "PIN2";
