--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -271,3 +271,4 @@
 "wrong-pin2-single" = "Неверный PIN2. У вас есть 1 попытка.";
 "pin2-textfield-label" = "PIN2";
 "pin2-blocked-alert" = "Ваш PIN2 заблокирован.\nПожалуйста, используйте утилиту утилиты ID-карты, чтобы разблокировать свой PIN2";
+"id-card-sign-generic-error-message" = "Что-то пошло не так. Пожалуйста, попробуйте еще раз";
