--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -269,3 +269,4 @@
 "wrong-pin2-single" = "Wrong PIN2. You have 1 attempt left.";
 "pin2-textfield-label" = "PIN2";
 "pin2-blocked-alert" = "Your PIN2 is blocked.\nPlease use ID-card utility app to unlock your PIN2";
+"id-card-sign-generic-error-message" = "Something went wrong. Please try again";
