* Fixed blocked PIN2 error message
MOPPIOS-286

Signed-off-by: Sander Hunt <sander.hunt@fob-solutions.com>

--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -269,7 +269,7 @@
 "wrong-pin2-single" = "Vale PIN2. 1 katse järgi.Sisestades vale PIN2-e sinu PIN2 lukustub";
 "card-reader-state-initial" = "Allkirjastamiseks ühenda kaardilugeja telefoniga ja sisesta enda ID-kaart lugejasse";
 "pin2-textfield-label" = "PIN2";
-"pin2-blocked-alert" = "Sinu PIN2 on lukustatud.\nPIN2 avamiseks kasuta ID-kaardi haldusvahendit";
+"pin2-blocked-alert" = "PIN2 blokeeritud.\nMine Minu eID vaatele, et avada PIN2";
 "id-card-sign-generic-error-message" = "Midagi läks valesti. Palun proovi uuesti";
 "signing-aborted-message" = "Viga: signeerimise protsess katkestatud";
 "my-eid-status-reader-not-found" = "Ühenda ID-kaardi lugeja telefoniga ja sisesta enda ID-kaart lugejasse";
