--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -270,7 +270,7 @@
 "wrong-pin2" = "Неверный PIN2. У вас осталось %d попытки.\nНабрав неверный PIN2 еще 2 раза, ваш PIN2 будет заблокирован";
 "wrong-pin2-single" = "Неверный PIN2. У вас есть 1 попытка.\nНабрав неправильный PIN2, ваш PIN2 будет заблокирован";
 "pin2-textfield-label" = "PIN2";
-"pin2-blocked-alert" = "Ваш PIN2 заблокирован.\nПожалуйста, используйте утилиту утилиты ID-карты, чтобы разблокировать свой PIN2";
+"pin2-blocked-alert" = "PIN2 заблокирован. Перейдите в «Мой eID», чтобы разблокировать свой PIN2.";
 "id-card-sign-generic-error-message" = "Что-то пошло не так. Пожалуйста, попробуйте еще раз";
 "signing-aborted-message" = "Ошибка: процесс подписи прерывается";
 "my-eid-status-reader-not-found" = "Подключите считыватель ID-карт к телефону и вставьте идентификационную карту в устройство чтения";
