* Fixed app crash when trying to import file during file import
MOPPIOS-301

Signed-off-by: Sander Hunt <sander.hunt@fob-solutions.com>

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -281,3 +281,4 @@
 "my-eid-info-item-citizenship" = "CITIZENSHIP";
 "my-eid-info-item-document-number" = "DOCUMENT NUMBER";
 "my-eid-info-item-expiry-date" = "VALID UNTIL";
+"file-import-already-in-progress-message" = "File importing already in progress.\nPlease wait until it is finished and try again";
