* Display user a separate state for requesting My eID data
MOPPIOS-42

Signed-off-by: Sander Hunt <sander.hunt@fob-solutions.com>

--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -271,10 +271,11 @@
 "wrong-pin2-single" = "Неверный PIN2. У вас есть 1 попытка.\nНабрав неправильный PIN2, ваш PIN2 будет заблокирован";
 "pin2-textfield-label" = "PIN2";
 "pin2-blocked-alert" = "PIN2 заблокирован. Перейдите в «Мой eID», чтобы разблокировать свой PIN2.";
-"id-card-sign-generic-error-message" = "Что-то пошло не так. Пожалуйста, попробуйте еще раз";
+"generic-error-message" = "Что-то пошло не так. Пожалуйста, попробуйте еще раз";
 "signing-aborted-message" = "Ошибка: процесс подписи прерывается";
 "my-eid-status-reader-not-found" = "Подключите считыватель ID-карт к телефону и вставьте идентификационную карту в устройство чтения";
 "my-eid-status-card-not-found" = "Читатель нашел.\nВставьте свою идентификационную карту в считыватель";
+"my-eid-status-requesting-data" = "ID-карта найдена.\nЗапрос информации";
 "my-eid-auth-cert-expired" = "Истекший";
 "my-eid-auth-cert-valid" = "Действительно";
 "my-eid-info-item-given-names" = "ИМЯ";
