--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -270,10 +270,11 @@
 "card-reader-state-initial" = "Allkirjastamiseks ühenda kaardilugeja telefoniga ja sisesta enda ID-kaart lugejasse";
 "pin2-textfield-label" = "PIN2";
 "pin2-blocked-alert" = "PIN2 blokeeritud.\nMine Minu eID vaatele, et avada PIN2";
-"id-card-sign-generic-error-message" = "Midagi läks valesti. Palun proovi uuesti";
+"generic-error-message" = "Midagi läks valesti. Palun proovi uuesti";
 "signing-aborted-message" = "Viga: signeerimise protsess katkestatud";
 "my-eid-status-reader-not-found" = "Ühenda ID-kaardi lugeja telefoniga ja sisesta enda ID-kaart lugejasse";
 "my-eid-status-card-not-found" = "Kaardilugeja leitud.\nSisesta enda ID-kaart kaardilugejasse";
+"my-eid-status-requesting-data" = "ID-kaart leitud.\nKaardilt loetakse infot";
 "my-eid-auth-cert-expired" = "Aegunud";
 "my-eid-auth-cert-valid" = "Kehtiv";
 "my-eid-info-item-given-names" = "EESNIMED";
