* PIN/PUK accordion in My eID tab
MOPPIOS-52

Signed-off-by: Sander Hunt <sander.hunt@fob-solutions.com>

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -274,8 +274,8 @@
 "my-eid-status-reader-not-found" = "Connect ID-card reader to your phone and insert your ID-card into the reader";
 "my-eid-status-card-not-found" = "Reader found.\nInsert your ID-card into the reader";
 "my-eid-status-requesting-data" = "ID-card found.\nRequesting information";
-"my-eid-auth-cert-expired" = "Expired";
-"my-eid-auth-cert-valid" = "Valid";
+"my-eid-cert-expired" = "expired";
+"my-eid-cert-valid" = "valid";
 "my-eid-info-item-given-names" = "GIVEN NAMES";
 "my-eid-info-item-surname" = "SURNAME";
 "my-eid-info-item-personal-code" = "PERSONAL CODE";
@@ -288,3 +288,17 @@
 "my-eid-info-my-eid-digi-id" = "DIGI-ID";
 "my-eid-info-my-eid-unknown" = "UNKNOWN";
 "file-import-already-in-progress-message" = "File importing already in progress.\nPlease wait until it is finished and try again";
+"my-eid-cert-info-prefix" = "Certificate is ";
+"my-eid-cert-info-valid-suffix" = " until ";
+"my-eid-cert-info-expired-suffix"= ", was valid until ";
+"my-eid-info-pin1-title" = "PIN1 - Authentication certificate";
+"my-eid-info-pin2-title" = "PIN2 - Signing certificate";
+"my-eid-info-puk-title" = "PUK code";
+"my-eid-info-pin1-link-text" = "Forgot PIN1 code?";
+"my-eid-info-pin2-link-text" = "Forgot PIN2 code?";
+"my-eid-info-puk-link-text" = "Forgot PUK code?";
+"my-eid-info-pin1-button-title" = "CHANGE PIN1";
+"my-eid-info-pin2-button-title" = "CHANGE PIN2";
+"my-eid-info-puk-button-title" = "CHANGE PUK";
+"my-eid-info-puk-cert-info-text" = "PUK code is in your code envelope";
+"my-eid-info-pin-puk-segment-title" = "PIN/PUK CODES AND CERTIFICATES CONTROL";
