* My eID PINs/PUK changing
MOPPIOS-53

Signed-off-by: Sander Hunt <sander.hunt@fob-solutions.com>

--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -310,3 +310,30 @@
 "my-eid-unblock-pin1-button-title" = "LUKUSTA LAHTI PIN1";
 "my-eid-unblock-pin2-button-title" = "LUKUSTA LAHTI PIN2";
 "my-eid-how-to-get-codes-message" = "Uuri kuidas saada uued koodid";
+"my-eid-info-bullet-change-pin1-title" = "PIN1 koodi muutmine";
+"my-eid-info-bullet-pin1-difference-warning" = "Uus PIN1 peab olema eelmisest erinev";
+"my-eid-info-bullet-pin1-cert-info" = "PIN1 koodi kasutatakse isikutuvastamise sertifikaadi juurdepääsemiseks";
+"my-eid-info-bullet-wrong-pin1-warning" = "Kui sisestad PIN1 koodi kolm korda valesti siis isikutuvastamise sertifikaat blokeeritakse ning ID-kaarti pole võimalik isikutuvamiseks kasutada enne blokeeringu tühistamist PUK koodi abil";
+"my-eid-code-changed-success-message" = "%@ MUUDETUD";
+"my-eid-code-unblocked-success-message" = "%@ LAHTI LUKUSTATUD";
+"my-eid-wrong-code-message" = "Oled sisestanud %i korda vale %@ koodi. Sul on järgi veel %i katset.";
+"my-eid-wrong-code-message-singular" = "Oled sisestanud 2 korda vale %@ koodi. Sul on järgi veel 1 katse";
+"my-eid-code-blocked-message" = "Sa oled sisestanud 3 korda vale %@ koodi. %@ on blokeeritud";
+// *** My eID info bullets ***
+"my-eid-info-bullet-same-codes-warning" = "Uus %@ peab olema eelmisest erinev";
+"my-eid-info-bullet-auth-cert-info" = "PIN1 koodi kasutatakse isikutuvastamiseks";
+"my-eid-info-bullet-pin1-blocked-warning" = "Kui sisestad PIN1 koodi kolm korda valesti siis isikutuvastamise sertifikaat blokeeritakse ning ID-kaarti pole võimalik isikutuvamiseks kasutada enne blokeeringu tühistamist PUK koodi abil";
+"my-eid-info-bullet-forgot-code-note" = "Kui olete unustanud %@ koodi, kuid teate PUK koodi siis siin saate määrata uue %@ koodi";
+"my-eid-info-bullet-puk-envelope-info" = "PUK koodi leiad ID kaardi koodiümbrikust, kui sa pole seda vahepeal muutnud";
+"my-eid-info-bullet-sign-cert-info" = "PIN2 koodi kasutatakse digitaalallkirja andmiseks";
+"my-eid-info-bullet-pin2-blocked-warning" = "Kui sisestad PIN2 koodi kolm korda valesti siis allkirjastamise sertifikaat blokeeritakse ning ID-kaardi pole võimalik allkirjastamiseks kasutada enne blokeeringu tühistamist PUK koodi abil";
+"my-eid-info-bullet-puk-unblock-info" = "PUK koodi abil saab tühistada sertifikaadi blokeeringu, kui PIN1 või PIN2 koodi on 3 korda järjest valesti sisestatud";
+"my-eid-info-bullet-puk-blocked-warning" = "Kui peale vahetamist PUK kood ununeb ja sertifikaat jääb blokeerituks kolme vale PIN1 või PIN2 koodi sisestamise järel, siis ainus võimalus ID-kaart jälle tööle saada on pöörduda klienditeeninduse poole";
+"my-eid-change-code-title" = "%@ vahetamine";
+"my-eid-unblock-code-title" = "%@ lahti lukustamine";
+"my-eid-current-code-label" = "KEHTIV %@ KOOD";
+"my-eid-new-code-label" = "UUS %@ KOOD (vähemalt %i sümbolit)";
+"my-eid-new-code-again-label" = "UUS %@ KOOD UUESTI";
+"my-eid-discard-button-title" = "KATKESTA";
+"my-eid-confirm-change-button-title" = "MUUDA";
+"my-eid-confirm-unblock-button-title" = "LUKUSTA LAHTI";
