--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -309,4 +309,26 @@
 "my-eid-unblock-pin1-button-title" = "UNBLOCK PIN1";
 "my-eid-unblock-pin2-button-title" = "UNBLOCK PIN2";
 "my-eid-how-to-get-codes-message" = "See how to get new codes";
-
+"my-eid-code-changed-success-message" = "%@ SUCCESSFULLY CHANGED";
+"my-eid-code-unblocked-success-message" = "%@ SUCCESSFULLY UNBLOCKED";
+"my-eid-wrong-code-message" = "You have entered %i times wrong %@. %i attempts left.";
+"my-eid-wrong-code-message-singular" = "You have entered 2 times wrong %@ code. You have 1 attempt left";
+"my-eid-code-blocked-message" = "You have entere 3 times wrong %@ code. %@ code is blocked";
+// *** My eID info bullets ***
+"my-eid-info-bullet-same-codes-warning" = "New %@ must be different from the previous one";
+"my-eid-info-bullet-auth-cert-info" = "PIN1 code is used for authentication";
+"my-eid-info-bullet-pin1-blocked-warning" = "If you enter three times wrong PIN1 code then authentication certificate will be blocked and ID-card cannot be used for authentication until blocking has been revoked with PUK code";
+"my-eid-info-bullet-forgot-code-note" = "If you have forget %@ code but you know your PUK code then you can change your %@ here with PUK code";
+"my-eid-info-bullet-puk-envelope-info" = "You can find PUK code from your codes envelope if you haven't changed it yourself";
+"my-eid-info-bullet-sign-cert-info" = "PIN2 is used for digital signatures";
+"my-eid-info-bullet-pin2-blocked-warning" = "If you enter three times wrong PIN2 code then signing certificate will be blocked and ID-card cannot be used for digital signatures until you have revoked blocking with PUK code";
+"my-eid-info-bullet-puk-unblock-info" = "PUK code can be used for revoking certificate blocking if wrong PIN1 or PIN2 has been entered three times.";
+"my-eid-info-bullet-puk-blocked-warning" = "If the PUK code goes away after changing the code, and the certificate will be blocked by entering three incorrect PIN1 then the only way to get an ID-card is to turn to work customer service point";
+"my-eid-change-code-title" = "Change %@";
+"my-eid-unblock-code-title" = "Unblock %@";
+"my-eid-current-code-label" = "CURRENT %@ CODE";
+"my-eid-new-code-label" = "NEW %@ CODE (at least %i symbols)";
+"my-eid-new-code-again-label" = "NEW %@ CODE AGAIN";
+"my-eid-discard-button-title" = "CANCEL";
+"my-eid-confirm-change-button-title" = "CHANGE";
+"my-eid-confirm-unblock-button-title" = "UNBLOCK";
